--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,12 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.13.4",
+    "dotenv": "^16.4.6",
+    "ethers": "^5.7.2",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "ioredis": "^5.4.1",
+    "joi": "^17.13.3",
     "jsdom": "^25.0.1",
     "loopback-connector-mysql": "^7.0.16",
     "loopback-datasource-juggler": "^5.1.2",
@@ -30,6 +31,7 @@
     "node-vault": "^0.10.2",
     "pg": "^8.13.1",
     "qrcode": "^1.5.4",
+    "sequelize": "^6.37.5",
     "winston": "^3.17.0"
   }
 }
